--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Подключение  -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="images/react-logo.svg">
+    <link rel="shortcut icon" href="images/main-icons/react-logo.svg" type="image/x-icon">
     <script src="js/app.js" defer></script>
     <title>Главная</title>
 </head>
 
 
-<body>
+<body class="bodyWithOtherMainFont">
     <meta content="width=1180" name="viewport" id="viewport">
     <header id="header">
         <svg viewBox="0 0 372 418" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li><a href="#header">Главная</a></li>
-                <li><a href="#documentation">Документация</a></li>    
+                <li><a href="#documentation">Документация</a></li>
                 <li><a href="#">Полезные ссылки</a></li>
                 <li><a href="#">Поддержать проект</a></li>
             </ul>
@@ -38,10 +38,11 @@
 
     <section id="documentation">
         <div class="block-1">
-            <ul class="list-items">
-                <div class="list-title"></div>
-                <li class="list-item"><a href="#">0.1 NodeJS </a></li>
-                <li class="list-item"><a href="#">0.2 Введение</a></li>
+            <ul>
+                <li class="list-item"><a href="html/NodeJS.html">NodeJS</a></li>
+                <li class="list-item"><a href="#" >Введение</a></li>
+                <li class="list-item"><a href="#" >Подлкючение</a></li>
+                <li class="list-item"><a href="#" >Хуки</a></li>
             </ul>
         </div>
     </section>
