change media queries and and some propetries

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <section id="documentation">
         <div class="block-1">
             <ul>
-                <li class="list-item"><a href="html/NodeJS.html">NodeJS</a></li>
-                <li class="list-item"><a href="#" >Введение</a></li>
-                <li class="list-item"><a href="#" >Подлкючение</a></li>
-                <li class="list-item"><a href="#" >Хуки</a></li>
+                <li><a href="html/NodeJS.html">NodeJS</a></li>
+                <li><a href="#" >Введение</a></li>
+                <li><a href="#" >Подлкючение</a></li>
+                <li><a href="#" >Хуки</a></li>
             </ul>
         </div>
     </section>
