--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Подключение  -->
-    <link rel="stylesheet" href="../ReactDocumentation/css/index.css"> 
+    <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="images/main-icons/react-logo.svg" type="image/x-icon">
     <script src="js/app.js" defer></script>
     <title>Главная</title>
