add some changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </svg>
         <div class="container-header-text">
             <h1 class="header-text react-text">React:</h1>
-            <p class="header-text">Руководство для чайников</р>
+            <p class="header-text">Руководство для чайников</p>
         </div>
 
         <nav>
