change styles in paragraph

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="#header">Главная</a></li>
                 <li><a href="#documentation">Документация</a></li>
-                <li><a href="#">Полезные ссылки</a></li>
+                <li><a href="#">Полезно</a></li>
                 <li><a href="#">Поддержать проект</a></li>
             </ul>
         </nav>
