modified:   css/index.css 	modified:   html/NodeJS.html 	new file:   html/installNodeJS.html 	new file:   images/1lesson/error.jpg 	new file:   images/1lesson/react_installing.jpg 	modified:   index.html

--- a/html/NodeJS.html
+++ b/html/NodeJS.html
@@ -29,13 +29,13 @@
             процессору). Также NodeJS уникален тем, что даёт возможность писать код на том же языке, на котором вы
             создаёте интерактивность страницы - JS, тем самым превращая наш любимый яп - JS из узкоспециализированного
             языка в язык общего назначения, но мы в своём курсе не будем использовать все возможности этого супергероя.
-        <p>
+        </p>
          
         <div class="block-border">
             <ul>
                 <li>NPM - главная наша особенность при работе с React, в ней есть все необходимые программы для компиляции.</li>
-                <li>-Для NodeJS написано куча программ(пакетов, модулей)</li>
-                <li> А npm(NodeJS Package Manager) приходит на помощь и помогает все эти программы держать в условном каталоге, устанавливать и держать актуальные версии. </li>
+                <li>Для NodeJS написано куча программ(пакетов, модулей). В этом множестве сложно разобраться самому. Npm(NodeJS Package Manager) 
+                    приходит на помощь и помогает все эти программы держать в условном каталоге, устанавливать и держать актуальные версии.</li>
             </ul>
         </div>
     </div>
