--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="block-1">
             <ul>
                 <li><a href="html/NodeJS.html">NodeJS</a></li>
+                <li><a href="html/installNodeJS.html">Установка NodeJS</a></li>
                 <li><a href="#" >Введение</a></li>
                 <li><a href="#" >Подлкючение</a></li>
                 <li><a href="#" >Хуки</a></li>
