modified:   css/index.css 	modified:   html/IndexAppJsx.html 	new file:   images/2lesson/basicApp.jpg 	modified:   index.html

--- a/html/IndexAppJsx.html
+++ b/html/IndexAppJsx.html
@@ -21,19 +21,23 @@
 <div class="main">
 
     <h1>2-ой урок React</h1>
-    <p>Мы создали приложение. У нас появилась старница, в которой происходит вся жизнь этого приложения.
-        Папку node_modules мы не трогаем никогда. У нас есть папки public и src. В public находится тот самый
-        index.html в котором наша страница. Html мало, а вся движуха происходит в app.js. Этот файл находится уже в
+    <p>Мы создали приложение. У нас появилась страница, в которой происходит вся жизнь этого приложения. Давайте посмотрим, что где находится. Зайдем в папку проекта.
+        Папку node_modules мы не трогаем. У нас есть папки public и src. В public находится тот самый
+        index.html в котором наша страница. Html кода мало, а вся движуха происходит в app.js. Этот файл находится уже в
         папке src. В этом файле есть разметка, которая и отображается у нас на странице. А теперь, что это такое?
-        Почему разметка в js?</p>
-    <p>Разработчики в Facebook (На всякий случай осуждаю)
-    </p>
-    <p>
+        Разметка в react'e напписана на js. Для начала мы вам предлагаем поменять строчку class App = Component на стрелочную функцию const 
+        App = () =>. Она возвращает то, что находится в return(), то есть JSX разметку (Это не просто html, а html, встроенный в js. Вот такие дела). 
+        Стоит заметить, что для обозначения класса, нужно писать className, т.к. class зарезервировано. Кроме того, внутри скобок return'а должен быть 
+        только 1 родитель (мама или папа?) </p>
+    <img src="../images/2lesson/basicApp.jpg" alt="basicApp" class="img-basic_app">
+    <p>Как задется внешний вид? В первых строчках App.js у нас есть разные import'ы. Мы можем импортировать или экспортировать в другие файлы
+        наш код. Сейчас рассматриваем import './App.css'. Символы "./" означают, что импорт идет из папки, в которой вы сейчас находитесь. Заходим-с 
+        в этот самый App.css . Как и так видно, это обычный файл с css. Предлагаю вам попробовать написать пару тэгов в App.js и строк в App.css .
     </p>
     <div class="block-border">
         <ul>
-            <li></li>
-            <li></li>
+            <li>Функция App возвращает JSX разметку</li>
+            <li>class Заменяется на className, а в return() функции App должен быть лишь 1 родительский элемент.</li>
         </ul>
     </div>
 </div>
