--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="html/NodeJS.html">NodeJS</a></li>
                 <li><a href="html/installNodeJS.html">Установка NodeJS</a></li>
-                <li><a href="#" >Введение</a></li>
+                <li><a href="html/IndexAppJsx.html" >Введение</a></li>
                 <li><a href="#" >Подлкючение</a></li>
                 <li><a href="#" >Хуки</a></li>
             </ul>
