modified:   css/index.css 	modified:   html/IndexAppJsx.html 	new file:   html/component.html 	modified:   images/2lesson/basicApp.jpg 	new file:   images/3lesson/compincomp.jpg 	new file:   images/3lesson/componentApp.jpg 	modified:   index.html

--- a/html/IndexAppJsx.html
+++ b/html/IndexAppJsx.html
@@ -23,9 +23,9 @@
     <h1>2-ой урок React</h1>
     <p>Мы создали приложение. У нас появилась страница, в которой происходит вся жизнь этого приложения. Давайте посмотрим, что где находится. Зайдем в папку проекта.
         Папку node_modules мы не трогаем. У нас есть папки public и src. В public находится тот самый
-        index.html в котором наша страница. Html кода мало, а вся движуха происходит в app.js. Этот файл находится уже в
+        index.html в котором наша страница.<break> Html кода мало, а вся движуха происходит в app.js. Этот файл находится уже в
         папке src. В этом файле есть разметка, которая и отображается у нас на странице. А теперь, что это такое?
-        Разметка в react'e напписана на js. Для начала мы вам предлагаем поменять строчку class App = Component на стрелочную функцию const 
+        <break>Разметка в react'e напписана на js. Для начала мы вам предлагаем поменять строчку class App = Component на стрелочную функцию const 
         App = () =>. Она возвращает то, что находится в return(), то есть JSX разметку (Это не просто html, а html, встроенный в js. Вот такие дела). 
         Стоит заметить, что для обозначения класса, нужно писать className, т.к. class зарезервировано. Кроме того, внутри скобок return'а должен быть 
         только 1 родитель (мама или папа?) </p>
