--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     <section id="documentation">
         <div class="block-1">
             <ul>
-                <li><a href="html/NodeJS.html">NodeJS</a></li>
-                <li><a href="html/installNodeJS.html">Установка NodeJS</a></li>
+                <li><a href="html/NodeJS.html" >NodeJS</a></li>
+                <li><a href="html/installNodeJS.html" >Установка NodeJS</a></li>
                 <li><a href="html/IndexAppJsx.html" >Введение</a></li>
+                <li><a href="html/component.html" >Компонента</li>
                 <li><a href="#" >Подлкючение</a></li>
                 <li><a href="#" >Хуки</a></li>
             </ul>
