modified:   html/component.html

--- a/html/component.html
+++ b/html/component.html
@@ -26,7 +26,7 @@
     </p>
     <img src="../images/3lesson/componentApp.jpg" alt="ComponentApp" class="img-componentapp">
     <p> Тэг для вызова компоненты выглядит так: &lt;Name /&gt;. Как пример &lt;App /&gt; . Через этот тэг можно ещё писать компоненты в компонентах. По сути в этом и нет ничего 
-        удивительного. Как пример: 
+        удивительного. Допустим: 
     </p>
     <img src="../images/3lesson/compincomp.jpg" alt="ComponentInComponent" class="img-compincomp">
     <p></p>
