modified:   css/index.css 	modified:   html/IndexAppJsx.html 	modified:   html/NodeJS.html 	modified:   html/component.html 	modified:   html/installNodeJS.html 	new file:   html/route.html 	new file:   images/route/installing.jpg 	new file:   images/route/route.jpg 	new file:   images/route/way.jpg 	modified:   index.html

--- a/html/IndexAppJsx.html
+++ b/html/IndexAppJsx.html
@@ -29,7 +29,7 @@
         App = () =>. Она возвращает то, что находится в return(), то есть JSX разметку (Это не просто html, а html, встроенный в js. Вот такие дела). 
         Стоит заметить, что для обозначения класса, нужно писать className, т.к. class зарезервировано. Кроме того, внутри скобок return'а должен быть 
         только 1 родитель (мама или папа?) </p>
-    <img src="../images/2lesson/basicApp.jpg" alt="basicApp" class="img-basic_app">
+    <img src="../images/2lesson/basicApp.jpg" alt="basicApp" class="main-settings-of-image">
     <p>Как задется внешний вид? В первых строчках App.js у нас есть разные import'ы. Мы можем импортировать или экспортировать в другие файлы
         наш код. Сейчас рассматриваем import './App.css'. Символы "./" означают, что импорт идет из папки, в которой вы сейчас находитесь. Заходим-с 
         в этот самый App.css . Как и так видно, это обычный файл с css. Предлагаю вам попробовать написать пару тэгов в App.js и строк в App.css .
