--- a/html/NodeJS.html
+++ b/html/NodeJS.html
@@ -23,7 +23,7 @@
         <h1>0-ой урок React</h1>
         <p>Для начала работы с React необходим NodeJs, дальше может последовать логичный вопрос - что такой ваш
             NodeJS?!! И на это у нас есть ответ.😋</p>
-        <img src="../images/0lesson/nodeJsandnpm.png" alt="NodeJsAndNpm" class="img-nodejs">
+        <img src="../images/0lesson/nodeJsandnpm.png" alt="NodeJsAndNpm" class="main-settings-of-image">
         <p>B целом NodeJS представляет собой консоль, но это нечто большое, а конкретнее - программная платформа,
             которая работает на сервере и компилирует наш JavaScript код в машинный код(состоит из 0 и 1, и понятен
             процессору). Также NodeJS уникален тем, что даёт возможность писать код на том же языке, на котором вы
