--- a/html/component.html
+++ b/html/component.html
@@ -24,11 +24,11 @@
     <p>Компонента - это функция, возвращающая разметку JSX. Но вызов компоненты просиходит, в отличие от функции, через
         тэг. То есть, создавая компаненту, мы создаем тэг из названия этой компоненты.<break> Как пример компоненты, можно взять стрелочную фунцию App.
     </p>
-    <img src="../images/3lesson/componentApp.jpg" alt="ComponentApp" class="img-componentapp">
+    <img src="../images/3lesson/componentApp.jpg" alt="ComponentApp" class="main-settings-of-image">
     <p> Тэг для вызова компоненты выглядит так: &lt;Name /&gt;. Как пример &lt;App /&gt; . Через этот тэг можно ещё писать компоненты в компонентах. По сути в этом и нет ничего 
         удивительного. Допустим: 
     </p>
-    <img src="../images/3lesson/compincomp.jpg" alt="ComponentInComponent" class="img-compincomp">
+    <img src="../images/3lesson/compincomp.jpg" alt="ComponentInComponent" class="main-settings-of-image">
     <p></p>
     <div class="block-border">
         <ul>
