--- a/html/installNodeJS.html
+++ b/html/installNodeJS.html
@@ -26,7 +26,7 @@
             процессе установки ничего менять не нужно - соглашаемся со всем. Процесс настройки очень геморный, но есть
              гении из facebook (на всякий случай осуждаю), которые сделали create-react-app. Вам не обязательно знать 
              как это всё работает, но это работает. Всему свое время. </p>
-        <img src="../images/1lesson/react_installing.jpg" alt="create-react-app" class="img-react_installing">
+        <img src="../images/1lesson/react_installing.jpg" alt="create-react-app" class="main-settings-of-image">
         <p>Стоит уточнить, что все программки лежат на GitHub, да и вообще всем нужен аккаунт GitHub.
             Первое, что нужно сделать для создания нашего одностраничного приложения, так это открыть Node.js command prompt
             и выбрать папку, в которой будут храниться проекты. Помните, что "В пути не должно быть русских символов". Чтобы 
@@ -38,7 +38,7 @@
             этого заходим через консоль в папку проекта (Если этого не сделать, ошибка вылетит) и пишем npm start . 
             Вы подняли локальный сервер.
         </p>
-        <img src="../images/1lesson/error.jpg" alt="error_folder" class="img-error_folder">
+        <img src="../images/1lesson/error.jpg" alt="error_folder" class="main-settings-of-image">
         <p></p>
         <div class="block-border">
             <ul>
