--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="html/component.html" >Компонента</li>
                 <li><a href="#" >Подлкючение</a></li>
                 <li><a href="#" >Хуки</a></li>
+                <li><a href="html/route.html">Простейшая маршрутизация, route<a></li>
             </ul>
         </div>
     </section>
