modified:   css/index.css 	modified:   index.html 	modified:   js/app.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <h1 class="header-text react-text">React:</h1>
             <p class="header-text">Руководство для чайников</p>
         </div>
-
+        <div>
+            <h1 id="button-down">ВНИЗ</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="#header">Главная</a></li>
