--- a/html/IndexAppJsx.html
+++ b/html/IndexAppJsx.html
@@ -42,5 +42,11 @@
     </div>
 </div>
 </body>
+<footer>
+    <div>
+        <a id="leftArrow" href="installNodeJS.html"></a>
+        <a id="rightArrow" href="component.html"></a>
+    </div>
+</footer>
 
 </html>
