--- a/html/NodeJS.html
+++ b/html/NodeJS.html
@@ -41,4 +41,10 @@
     </div>
 </body>
 
+<footer>
+    <div>
+        <a id="rightArrow" href="InstallNodeJS.html"></a>
+    </div>
+</footer>
+
 </html>
