--- a/html/installNodeJS.html
+++ b/html/installNodeJS.html
@@ -48,5 +48,11 @@
         </div>
     </div>
 </body>
+<footer>
+    <div>
+        <a id="leftArrow" href="NodeJs.html"></a>
+        <a id="rightArrow" href="IndexAppJsx.html"></a>
+    </div>
+</footer>
 
 </html>
